css/custom.css
/* Style guide
#182430 – dark navy, 
#e10068 – bright pink and 
#4cbcc0 - moderate magenta

*/

/* debuging styles, remove when done*/
/*
.row {
    outline: 1px dashed blue;
}

.columns {
    outline: 1px dashed red;
    outline-offset: -5px;
}
*/
/*************************************
        General styles
*****************************************/
body, h1, h2, h3, h4, h5, h6 {
    font-family: 'Lato', sans-serif;
    font-weight: 400;
}
/* Making a sticky footer
body {
    display:flex;
    flex-flow: column;
    min-height: 100vh;
}
main {
    flex: 1;
}
*/

.h1, h2, h3, h4, h5, h6 {
    font-weight: 700;
    margin-top: .5rem;
}

@media (min-width: 640px) and  (max-width:801px) {
    h2 {
        font-size: 170%;
    }
    p {
        font-size: 90%;
    }
    .lead {
    padding-bottom: 1rem;
    line-height: 1.3;
    }
}


.lead {
    padding-bottom: 1.5rem;
}


/***************************************** 
        Navigation styling 
******************************************/

.top-bar, .top-bar-left, .top-bar ul, .title-bar, .dropdown.menu, .submenu {
    background: #182430;

}

.top-bar-right {
    background: transparent;
}

@media (max-width: 320px) {
    .top-bar-right li a {
        padding: .5rem;
    }
}

@media (min-width: 1279px) {
    #main-nav li:nth-child(2) {
        padding-left: 3em;
}
}

ul a {
    color: #fff;
    transition: ease-in-out, color .1s;
}

ul a:hover {
    color: #e10068;
}

.active {
    background: #e10068;
    border-radius: 0 0 15% 15% / 0 0 50% 50%;
}

.active:hover {
    color: #fff;
}

@media (max-width: 1024px) {
    .current {
        border-radius: 0;
    }
}

.sidebar-nav a {
    color: #182430;  
}

.top-bar-right {
   margin-top: -100px;
    margin-left: calc(100% - 140px); /* Pushes menu to the right, works well on different widths*/
}

@media (min-width:1024px) {
    .top-bar-right { margin-top: -93px; } /* */
}
@media (max-width: 480px) {
    .top-bar-right{
        margin-top: -55px; /* works for 320, 360 widths*/
    }
     
}


/***************** New button classes **************/

.primary-btn {
    background: #4cbcc0 none repeat scroll 0 0;
    border: 1px solid transparent;
    border-radius: 30px;
    color: #fff;
    cursor: pointer;
    display: inline-block;
    font-size: 0.9rem;
    line-height: 1;
    padding: 0.85em 1em;
    text-align: center;
    transition: all 0.25s ease-out 0s;
    vertical-align: middle;
    min-width: 30%;
    
}

.primary-btn:hover {
    background: #e10068;
    color: #fff;   
}

@media (min-width: 767px) {
    .primary-btn {
        font-size: 1.1rem;
        width: 50%;
    
    }
}

.secondary-btn {
    background: transpetent none repeat scroll 0 0;
    border: 2px solid #fff;
    border-radius: 30px;
    color: #fff;
    cursor: pointer;
    display: inline-block;
    font-size: 0.9rem;
    line-height: 1;
    padding: 0.85em 1em;
    text-align: center;
    transition: all 0.25s ease-out 0s;
    vertical-align: middle;
    margin-top: 1.5rem;
}

.secondary-btn:hover {
    background: #fff;
    color: #4cbcc0;
}
/**************************************************/

.special-font {
    font-family: 'Permanent Marker', cursive;
    color:#e10068;
    font-size: 1.2em;
    line-height: 1;
    display: inline-block;
    transform: skew(-2deg, -3deg);   
}

/* this class defines container for featured image, if there is no image, it provides fallback color*/
.featured-image {
    height: 45vh;
    background: #182430;
    display: flex;
}


.featured-image h1, .featured-image h2, .featured-image p {
    color: #fff;
}

.vertical-centering {
    align-items: center;
    justify-content: center;
    margin: auto;
    padding: 2rem 0;
    background: rgba(16, 23, 31, 0.3)
}

/* the pink line over headline */
.vertical-centering h1:before {
    content: "";
    display: block;
    height: .9vh;
    width: 10vw;
    background: #e10068;
    
}

#front-section {
/*    background-image: url(../img/boy_new_overlay.png);*/
    background-image: url(../img/kidddd.png);
    background-repeat: no-repeat;
    background-color: #182430; /* dark navy */
    background-size: contain;
    background-position: -30vw -2vh;
    height: 100vh;
    color: #fff;
    display: flex;
}

@media(max-width: 360px) {
    #front-section {
        background-position: -35vw -2vh;
    }
}

#front-section .vertical-centering {
     background: rgba(16, 23, 31, .3);
}

#second-section, #third-section, #fourth-section, #page-footer {
    padding: 3rem 0;  
     color: #fff;
}

#second-section {
    background: #182430;
}

#third-section {
    background: #4cbcc0;
}
#fourth-section {
    color: #000;
}

#fourth-section h2 {
    color: #182430;
}
#sponsors {
    padding: 3rem 0;
    color: #182430;
}
#sponsors h2, #sponsors p {
    text-align: center;
}

#sponsors .primary-btn {
    margin-top: .5rem;
    box-shadow: 1px 1px 5px #dfdfdf;
}

#sponsor-logos {
    padding: .975rem 0;
}

/* Class for pink border on images */
.border-top {
    border-top: 6px solid #e10086; 
}


.card {
    transition: ease-in-out, background 1s;
    padding-bottom: 3rem;
    
}
.card:hover {
    background: #213141;
    box-shadow: 3px 3px 3px #10171f,
                  -3px -3px 3px #10171f;
}

img {
    margin-top: 0.9375rem;
}
.testimonial {
    padding-bottom: 3rem;
    color: #2c4157;
  
}
.name, .company {
    text-align:center;
}

.testimonial p:first-child:before {
    content: ' “ ';
    color: deeppink;
    font-size: 1.5rem;
}

@media (max-width: 640px) {
    .lead {
        font-size: 110%;
    }
}

#sponsors-featured {
    background-image: url(../img/sponsors-featured-left.jpg);
/*    background-position: -25vw top;*/
    background-position: left center;
    background-repeat: no-repeat;
/*    background-size: contain;*/
/*    background-size: cover;*/
    background-size: auto 100%;
}

@media (min-width:1280px){
    #sponsors-featured {
        background-position: -10vw top;
    }
}
/*********** FOOTER STYLES *********************/

#page-footer {
    background: #182830;
    padding-top: 3rem;
}

#page-footer ul li {
    list-style: none;
}

#page-footer ul li:before {
    content: "";
    display:block;
    background:url(../img/overline.png) no-repeat;
    width: 7px;
    height: 3px;
    position: relative;
    top: 15px; left: -20px;
}

.custom-bulleted-list ul li:before {
     content: "";
    display: block;
    background:url(../img/overline.png) no-repeat;
    width: 7px;
    height: 3px;
    position: relative;
    top: 15px; left: -20px;
}

#footer-branding {
    text-align: center;
}

#footer-branding p {
    margin-top: .975rem;
    line-height: 1.3;
}

.breadcrumbs {
    padding-top: 1.5rem;
}

#copyright {
    background: #e10068;
    color: #fff;
    padding: 1.5rem 0;
}

